@@ -75,7 +75,7 @@
     <dependency>
       <groupId>org.jboss.netty</groupId>
       <artifactId>netty</artifactId>
-      <version>3.2.4.Final</version>
+      <version>3.2.9.Final</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
